fix(main): 🐛 z-index messing w/ btn click

--- a/src/input.css
+++ b/src/input.css
@@ -10,7 +10,7 @@
 
 @layer components {
   .btn {
-    @apply py-1 px-5 rounded-full text-verde-700 bg-gradient-to-t from-verde-300 via-verde-200 to-verde-100  border border-verde-100 shadow-sm shadow-verde-200/50 hover:contrast-200 min-w-max;
+    @apply min-w-max py-1 px-5 rounded-full text-verde-700 bg-gradient-to-t from-verde-300 via-verde-200 to-verde-100  border border-verde-100 shadow-sm shadow-verde-200/50 hover:contrast-200 hover:cursor-pointer;
   }
   .btn-active {
     @apply py-1 px-5 rounded-full  bg-gradient-to-t border border-verde-100 shadow-sm shadow-verde-200/50 from-verde-200 to-verde-100 text-verde-600 hover:text-verde-400 min-w-max;
